<resources>
    <string name="app_name">MyShop</string>
    <string name="messageDisconnection">اتصال اینترنت برقرار نیست! لطفا بررسی کنید.</string>
    <string name="try_again">تلاش دوباره </string>
    <string name="lastProducts">جدید ترین ها</string>
    <string name="mostSeenProducts">پر بازدید ترین ها</string>
    <string name="favoriteProducts">محبوب ترین ها</string>
    <string name="tooman">  تومان </string>
    <string name="search">جستجو در فروشگاه من</string>
    <string name="filter">فیلتر</string>
    <string name="sort">جدید ترین</string>
    <string name="list">دسته بندی ها</string>
    <string name="shoppingBascet">سبد خرید</string>
    <string name="user">پروفایل</string>
    <string name="home">خانه</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">ثبت نام</string>
    <string name="signin">ورود</string>
    <string name="emailAddress">آدرس ایمیل</string>
    <string name="password">پسورد</string>
    <string name="id">آیدی</string>
    <string name="allPrice">جمع سبد خرید</string>
    <string name="allPrice0">0</string>
    <string name="continue_shopping">ادامه فرایند خرید</string>
    <string name="discountCode">"کد تخفیف : "</string>
    <string name="discountHint">...................</string>
    <string name="setDiscount">اعمال تخفیف</string>
    <string name="same_product">محصولات مشابه</string>
    <string name="reviews">نظرات کاربران</string>
    <string name="addReview">افزودن نظر</string>
    <string name="yourReview">نظر شما</string>
    <string name="setReview">ثبت نظر</string>
    <string name="cancel">انصراف</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="username">نام کاربری</string>
    <string name="emptyField">\" فیلد خالی!! \"</string>
    <string name="deleteAccount">خروج از حساب</string>
    <string name="location1">آدرس 1</string>
    <string name="location2">آدرس 2</string>
    <string name="saveLocation">ذخیره آدرس</string>
    <string name="username1">username</string>
</resources>