<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/colorSecondary"
        app:cardCornerRadius="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:id="@+id/txv_title_dialog_addReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/titleSizeHomeItem"
            android:textColor="?attr/colorPrimary"
            android:text="@string/yourReview"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/edt_dialog_addReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="@dimen/titleSizeHomeItem"
            android:hint="@string/yourReview"
            app:layout_constraintTop_toBottomOf="@id/txv_title_dialog_addReview"/>

            <Button
                android:id="@+id/btn_addReview_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:text="@string/setReview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_cancel_dialog"
                app:layout_constraintTop_toBottomOf="@id/edt_dialog_addReview"/>

            <Button
                android:id="@+id/btn_cancel_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:layout_constraintStart_toEndOf="@id/btn_addReview_dialog"
                app:layout_constraintTop_toBottomOf="@id/edt_dialog_addReview"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>